# forward-chan

./: README.md  forward-chan.cabal
Control/Concurrent/Chan/: Forwardable.hs
Control/Concurrent/Chan/Forwardable/: Internals.hs
