name:                forward-chan
version:             0.0.0.0
synopsis:            channels with the forwarding primitive from linear sequent calculus
description:
  An implementation of the forward primitive from the proof terms for the sequent caluclus formulation of linear logic
  .
  See <http://www.cs.cmu.edu/~fp/papers/tldi12.pdf> for more information on this primitive.
  .
  And <http://github.com/mmirman/forward-chan> for example usage.

homepage:            http://github.com/mmirman/forward-chan
license:             Apache
license-file:        LICENSE
author:              Matthew Mirman
maintainer:          matt@mirman.com

category:            Concurrency
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type:    git
  location: git://github.com/mmirman/forward-chan.git

library
  exposed-modules:     Control.Concurrent.Chan.Forwardable
  exposed-modules:     Control.Concurrent.Chan.Forwardable.Internals
  build-depends:       base >= 4.7.0.0 && < 6.0,
                       unagi-chan < 1.0,
                       SafeSemaphore >= 0.7 && < 1.0,
                       stm

  hs-source-dirs:      .
